[metadata]
name = beam
license = Apache-2.0
author = Entitle I.O, Avi Zetser, Dennis Zagiansky
author_email = beam@entitle.io, avi@entitle.io, dennis@entitle.io
maintainer = Avi Zetser, Dennis Zagiansky
maintainer_email = avi@entitle.io, dennis@entitle.io
description = AWS SSM Tool
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Topic :: System :: Systems Administration
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
exclude =
    test
    test.*

# Version Management for application
# Read more at https://jacobtomlinson.dev/posts/2020/versioning-and-formatting-your-python-code/
[versioneer]
VCS                 = git
style               = pep440
versionfile_source  = beam/_version.py
versionfile_build   = beam/_version.py
tag_prefix          =
parentdir_prefix    = beam-
